Add some attacker stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ target_compile_features(judge PRIVATE cxx_std_17)
 
 add_executable(attacker attacker/main.cpp)
 target_compile_features(attacker PRIVATE cxx_std_17)
+target_link_libraries(attacker stdc++fs)
 
 add_executable(defender defender/main.cpp)
 target_compile_features(defender PRIVATE cxx_std_17)
